RESOLVED FIXED23264
css2.1/t1205-c566-list-stl-00-e-ag.html is failing
https://bugs.webkit.org/show_bug.cgi?id=23264
Summary css2.1/t1205-c566-list-stl-00-e-ag.html is failing
Pierre-Olivier Latour
Reported 2009-01-12 13:01:21 PST
css2.1/t1205-c566-list-stl-00-e-ag.html is failing
Attachments
Patch v1 (296.15 KB, patch)
2009-11-04 14:36 PST, Shinichiro Hamaji
no flags
Patch v2 (285.64 KB, patch)
2009-11-18 08:39 PST, Shinichiro Hamaji
hyatt: review-
Patch v3 (286.05 KB, patch)
2009-11-20 08:07 PST, Shinichiro Hamaji
mitz: review+
Shinichiro Hamaji
Comment 1 2009-11-04 14:36:56 PST
Created attachment 42522 [details] Patch v1
Shinichiro Hamaji
Comment 2 2009-11-04 14:39:11 PST
This patch will fix Bug 23262 as well. The following URL would describe this bug well: http://tinyurl.com/yf2vux5
mitz
Comment 3 2009-11-16 10:42:13 PST
Comment on attachment 42522 [details] Patch v1 Shouldn’t there be a matching change to RenderBlock::calcInlinePrefWidths()?
Shinichiro Hamaji
Comment 4 2009-11-18 02:07:25 PST
(In reply to comment #3) > (From update of attachment 42522 [details]) > Shouldn’t there be a matching change to RenderBlock::calcInlinePrefWidths()? Ah, true. This bug happens even without list-style-position:inside. I filed Bug 31619 for this issue. Thanks for this very nice catch!
Shinichiro Hamaji
Comment 5 2009-11-18 08:36:18 PST
*** Bug 31619 has been marked as a duplicate of this bug. ***
Shinichiro Hamaji
Comment 6 2009-11-18 08:39:54 PST
Created attachment 43436 [details] Patch v2 I merged patch with Bug 31619's. It seems Qt version of buildbot was updated (http://trac.webkit.org/changeset/50878) and I think I need to upgrade my Qt version to produce correct expectations. Please let me mark them as skipped for now. I'll fix them later.
mitz
Comment 7 2009-11-19 08:55:21 PST
WebKit’s current behavior matches Firefox and appears to be intentional. Not sure this bug is valid.
Dave Hyatt
Comment 8 2009-11-19 13:44:37 PST
Comment on attachment 43436 [details] Patch v2 If we do the right thing for outside list markers, then it seems like you should just be able to drop the !inside checks and have the right thing happen rather than adding new code.
Dave Hyatt
Comment 9 2009-11-19 13:44:59 PST
I agree that this is a bug, and that we should fix the behavior.
Shinichiro Hamaji
Comment 10 2009-11-20 08:07:23 PST
Created attachment 43581 [details] Patch v3 > If we do the right thing for outside list markers, then it seems like you > should just be able to drop the !inside checks and have the right thing happen > rather than adding new code. Ah yes, I was confused. I updated my patch. Could you take a look again?
Shinichiro Hamaji
Comment 11 2009-11-30 14:12:34 PST
David and Dan, could you take another look at the updated patch? I think I addressed all of your comments. Thanks!
Shinichiro Hamaji
Comment 12 2009-11-30 23:37:41 PST
Note You need to log in before you can comment on or make changes to this bug.