2009-11-30  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Dan Bernstein.

        css2.1/t1205-c566-list-stl-00-e-ag.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=23264
        css2.1/t1205-c565-list-pos-00-b.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=23263

        Ignore whitespaces after list markers.
        Rendering of this was already done for the case where inside=false.
        This fixes the rendering of inside=true case and calcInlinePrefWidths.

        Test: fast/lists/calc-width-with-space.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcInlinePrefWidths):
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::findNextLineBreak):
2009-11-30  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Dan Bernstein.

        css2.1/t1205-c566-list-stl-00-e-ag.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=23264

        * editing/pasteboard/copy-crash-expected.txt:
        * fast/lists/calc-width-with-space-expected.txt: Added.
        * fast/lists/calc-width-with-space.html: Added.
        * platform/mac/css2.1/t1205-c561-list-displ-00-b-expected.checksum:
        * platform/mac/css2.1/t1205-c561-list-displ-00-b-expected.png:
        * platform/mac/css2.1/t1205-c561-list-displ-00-b-expected.txt:
        * platform/mac/css2.1/t1205-c565-list-pos-00-b-expected.checksum:
        * platform/mac/css2.1/t1205-c565-list-pos-00-b-expected.png:
        * platform/mac/css2.1/t1205-c565-list-pos-00-b-expected.txt:
        * platform/mac/css2.1/t1205-c566-list-stl-00-e-ag-expected.checksum:
        * platform/mac/css2.1/t1205-c566-list-stl-00-e-ag-expected.png:
        * platform/mac/css2.1/t1205-c566-list-stl-00-e-ag-expected.txt:
        * platform/mac/fast/block/positioning/complex-percentage-height-expected.checksum:
        * platform/mac/fast/block/positioning/complex-percentage-height-expected.png:
        * platform/mac/fast/block/positioning/complex-percentage-height-expected.txt:
        * platform/mac/fast/lists/item-not-in-list-line-wrapping-expected.checksum:
        * platform/mac/fast/lists/item-not-in-list-line-wrapping-expected.png:
        * platform/mac/fast/lists/item-not-in-list-line-wrapping-expected.txt:
        * platform/mac/fast/repaint/list-marker-expected.checksum:
        * platform/mac/fast/repaint/list-marker-expected.png:
        * platform/mac/fast/repaint/list-marker-expected.txt:
        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/42954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51527 268f45cc-cd09-0410-ab3c-d52691b4dbfc